# server

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: bd9a3d6409b7_init_all_tables.py  c771547f681c_create_user_table.py
app/: main.py  models.py
app/core/: config.py  database.py  dependencies.py  redis.py  security.py
app/domain/admin/: dependencies.py  router.py  service.py
app/domain/auth/: dependencies.py  router.py  schemas.py  service.py
app/domain/chat/: models.py
app/domain/indexing/: models.py
app/domain/inquiry/: models.py
app/domain/notice/: models.py
app/domain/pattern/: models.py
app/domain/project/: dependencies.py  models.py  repository.py
app/domain/repo/: models.py
app/domain/scrap/: dependencies.py  models.py  repository.py
app/domain/user/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/infrastructure/github/: oauth.py
