[project]
name = "pythonproject12"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "fastapi-sso>=0.21.0",
    "pgvector>=0.4.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.31",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
]
